:tada:Initial commit

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -22,12 +22,12 @@
     },
     "params": {
         "contact_form_action": "#",
-        "copyright": "Designed And Developed by [Zeon Studio](https://zeon.studio)"
+        "copyright": "Designed And Developed by [Alan Quintana](https://alanquintana.pro)"
     },
     "navigation_button": {
         "enable": true,
         "label": "Get Started",
-        "link": "https://github.com/zeon-studio/astroplate"
+        "link": "https://https://github.com/AlanDkoXS/mercado-regional"
     },
     "google_tag_manager": {
         "enable": false,
@@ -39,7 +39,7 @@
         "settings": {}
     },
     "metadata": {
-        "meta_author": "zeon.studio",
+        "meta_author": "Alan Quintana",
         "meta_image": "/images/og-image.png",
         "meta_description": "astro and tailwind boilerplate"
     }
