--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
     "site": {
         "title": "Mercado Regional",
-        "base_url": "https://astroplate.netlify.app",
+        "base_url": "https://mercadoregional.netlify.app",
         "base_path": "/",
         "trailing_slash": false,
         "favicon": "/images/favicon.svg",
@@ -24,7 +24,7 @@
         "copyright": "Designed And Developed by [Alan Quintana](https://alanquintana.pro)"
     },
     "navigation_button": {
-        "enable": true,
+        "enable": false,
         "label": "Get Started",
         "link": "https://https://github.com/AlanDkoXS/mercado-regional"
     },
