:mag: MODIFIED: Description for better SEO

--- a/src/config/config.json
+++ b/src/config/config.json
@@ -40,6 +40,6 @@
   "metadata": {
     "meta_author": "Alan Quintana",
     "meta_image": "/images/og-image.png",
-    "meta_description": "astro and tailwind boilerplate"
+    "meta_description": "Mercado Regional en Cd. Cuauhtemoc"
   }
 }
